--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="libs/bootstrap-3.1.1-dist/css/bootstrap.css" >
-    <link rel="stylesheet" href="lib/codemirror.css">
-    <script src="lib/codemirror.js"></script>
+    <link rel="stylesheet" href="libs/bootstrap-3.1.1-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="libs/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" hre="libs/codemirror/theme/monokai.css">
+    <script src="libs/codemirror/lib/codemirror.js"></script>
     <script src="libs/jquery.js"></script>
+    <script src="libs/codemirror/mode/javascript/javascript.js"></script>
 </head>
 <body>
+
+    <style>
+        .CodeMirror {
+            border: 1px solid black;
+            margin:5px;
+        }
+    </style>
 
 
 
@@ -43,11 +52,19 @@
 <script>
 
     $(function(){
-        var ta = $("#code")[0];
-        var editor = CodeMirror.fromTextArea(ta, {
-            value:'var x = "demo";',
-            mode: "javascript"
+
+        var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+            height: "150px",
+            width: "200px",
+            mode: "javascript",
+            lineNumbers: true
         });
+
+        var pending;
+        editor.on("change", function() {
+
+        });
+
 
     });
 
