--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="libs/bootstrap-3.1.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="libs/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" hre="libs/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="libs/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="libs/font-awesome-4.1.0/css/font-awesome.css">
     <script src="libs/codemirror/lib/codemirror.js"></script>
     <script src="libs/jquery.js"></script>
     <script src="libs/codemirror/mode/javascript/javascript.js"></script>
