--- a/pages/inhalt.html
+++ b/pages/inhalt.html
@@ -1,2 +1,37 @@
 <h2>Gliederung</h2>
 
+<div class="bullet">
+    <div class="bulletPoint">1</div>
+    Was ist JavaScript?
+</div>
+
+{{#history}}
+<div class="bullet">
+    <div class="bulletPoint">2</div>
+    Geschichte
+</div>
+{{/history}}
+{{#use}}
+<div class="bullet">
+    <div class="bulletPoint">3</div>
+    Nutzung
+</div>
+{{/use}}
+{{#concepts}}
+<div class="bullet">
+    <div class="bulletPoint">4</div>
+    Sprachkonzepte
+</div>
+{{/concepts}}
+{{#bewertung}}
+<div class="bullet">
+    <div class="bulletPoint">5</div>
+    Bewertung
+</div>
+{{/bewertung}}
+{{#future}}
+<div class="bullet">
+    <div class="bulletPoint">6</div>
+    Ausblick
+</div>
+{{/future}}
