--- a/pages/whatIs.html
+++ b/pages/whatIs.html
@@ -1,1 +1,29 @@
 <h2>Was ist JavaScript?</h2>
+{{#notjava}}
+<div>
+    <span class="fa fa-circle" style="font-size: 15px;"></span>
+    Nicht Java!
+</div>
+{{/notjava}}
+{{#script}}
+<div>
+    <span class="fa fa-circle" style="font-size: 15px;"></span>
+    Skriptsprache
+</div>
+{{/script}}
+{{#multi}}
+<div>
+    <span class="fa fa-circle" style="font-size: 15px;"></span>
+    Multiparadigmisch
+    <div class="indent">
+        <div>
+            <span class="fa fa-circle" style="font-size: 15px;"></span>
+            objektorientiert
+        </div>
+        <div>
+            <span class="fa fa-circle" style="font-size: 15px;"></span>
+            funktional
+        </div>
+    </div>
+</div>
+{{/multi}}
