--- a/pages/conceptsTheory.html
+++ b/pages/conceptsTheory.html
@@ -1,7 +1,100 @@
 <h2>Konzepte: ECMA 262</h2>
+<div id="concepts" style="height: 100%;position:relative;">
 
+    <div id="host">
+
+        <span><b>Host</b></span>
+
+        <div id="javascript">
+            <span>JavaScript</span><br>
+            <span>ECMA 262</span>
+        </div>
+        <div id="hostobj">
+            HObj<br>
+            <i class="fa fa-long-arrow-left"></i><br>
+            <i class="fa fa-long-arrow-right"></i><br>
+        </div>
+
+    </div>
+
+
+
+</div>
+<style>
+    #host {
+        background-color:cadetblue;
+        text-align: center;
+        -webkit-border-radius: 4%;
+        -moz-border-radius: 4%;
+        border-radius: 4%;
+    }
+
+    #javascript{
+        background-color:greenyellow;
+        left:100px;
+        top:120px;
+    }
+
+    #host span, #javascript span{
+        padding-top: 10%;
+    }
+
+    #hostobj i{
+        color:white;
+        font-size: 100px;
+        line-height: 10px;
+    }
+
+    #hostobj{
+        background-color: crimson;
+        width: 200px;
+        color:white;
+        font-size:30px;
+        height: 200px;
+        opacity: 0.8;
+        top:240px;
+        left:430px;
+    }
+
+    #javascript, #hostobj{
+        -webkit-border-radius: 100%;
+        -moz-border-radius: 100%;
+        border-radius: 100%;
+        text-align: center;
+        position: absolute;
+    }
+
+</style>
 <script>
     Page.loadConcepts = function(){
-        alert("hi");
+
+        var host = $("#host");
+        var js = $("#javascript");
+        var hostObj = $("#hostobj");
+
+        hostObj.hide();
+        host.width(300).height(300).css('opacity', 0);
+        js.width(300).height(300).css('opacity', 0);
+
+        host.animate({
+            width: '100%',
+            height: '80%',
+            opacity : 1
+        },{
+            duration : 1000, queue : false
+        });
+
+        js.animate({
+            width: '400px',
+            height: '400px',
+            opacity : 1
+        },{
+            duration : 1000, queue : false
+        });
+
+        setTimeout(function(){
+            hostObj.show();
+        },2000);
+
     };
 </script>
