--- a/pages/whatIs.html
+++ b/pages/whatIs.html
@@ -27,3 +27,9 @@
     </div>
 </div>
 {{/multi}}
+{{#deleg}}
+<div>
+    <span class="fa fa-circle" style="font-size: 15px;"></span>
+    Delegation Language
+</div>
+{{/deleg}}
