--- a/pages/prototyping.html
+++ b/pages/prototyping.html
@@ -15,8 +15,7 @@
                         __proto__ : Object.prototype
                 }
         }
-}
-        </textarea>
+}</textarea>
     </div>
 </div>
 <script>
