--- a/pages/history.html
+++ b/pages/history.html
@@ -1,1 +1,29 @@
-<h2>Geschichte</h2>
+<h2>Geschichte - Entstehung</h2>
+ 
+{{#livescript}}
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
+    LiveScipt
+</div>
+{{/livescript}}
+
+{{#manipulieren}}
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
+    Manipulieren von Webseiten
+</div>
+{{/manipulieren}}
+
+{{#koop}}
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
+    Kooperation zwischen Netscape und SunMicrosystems
+</div>
+{{/koop}}
+
+{{#javascr}}
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
+    JavaScript
+</div>
+{{/javascr}}
