--- a/pages/whatIs.html
+++ b/pages/whatIs.html
@@ -1,19 +1,21 @@
 <h2>Was ist JavaScript?</h2>
 {{#notjava}}
-<div>
-    <span class="fa fa-circle" style="font-size: 15px;"></span>
+<div class="bullet">
+    <div class="bulletPoint"> </div>
     Nicht Java!
 </div>
 {{/notjava}}
+
 {{#script}}
-<div>
-    <span class="fa fa-circle" style="font-size: 15px;"></span>
+<div class="bullet" style="padding-top: 20px;">
+    <div class="bulletPoint"> </div>
     Skriptsprache
 </div>
 {{/script}}
+
 {{#multi}}
-<div>
-    <span class="fa fa-circle" style="font-size: 15px;"></span>
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
     Multiparadigmisch
     <div class="indent">
         <div>
@@ -27,9 +29,10 @@
     </div>
 </div>
 {{/multi}}
+
 {{#deleg}}
-<div>
-    <span class="fa fa-circle" style="font-size: 15px;"></span>
+<div class="bullet" style="margin-top: 20px;">
+    <div class="bulletPoint"> </div>
     Delegation Language
 </div>
 {{/deleg}}
