--- a/pages/impl.html
+++ b/pages/impl.html
@@ -8,4 +8,5 @@
 <div class="impl" style="margin-left:100px;">
     <img src="res/adobe.png" width="120px"/>
     <img src="res/ff.png" width="120px"/>
+    <img src="res/espruino.png" width="120px"/>
 </div>
