--- a/pages/usage.html
+++ b/pages/usage.html
@@ -1,1 +1,35 @@
 <h2>Benutzung</h2>
+
+<div id="all" >
+
+	<div class="bullet" id="1" style="margin-top: 20px;">
+		<div class="bulletPoint"> </div>
+		Webbrowser
+	</div>
+
+	<div class="bullet" id="2" style="margin-top: 20px;">
+		<div class="bulletPoint"> </div>
+		Server
+	</div>
+
+	<div class="bullet" id="3" style="margin-top: 20px;">
+		<div class="bulletPoint"> </div>
+		Skript-Sprache
+	</div>
+
+
+	<div class="bullet" id="4" style="margin-top: 20px;">
+		<div class="bulletPoint"> </div>
+		Mikrocontroller
+	</div>
+
+</div>
+
+<script>
+    Page.loadall = function () {
+        $('#1').hide().fadeIn(100);
+        $('#2').hide().fadeIn(2000);
+        $('#3').hide().fadeIn(3000);;
+        $('#4').hide().fadeIn(4000);;
+    }
+</script>
